--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "defect-manager",
-  "version": "0.0.0",
-  "description": "Small description for defect-manager goes here",
+  "version": "0.0.1",
+  "description": "This is a simple manager for excel files extracted from Quality Center",
   "license": "MIT",
   "author": "",
   "directories": {
@@ -41,4 +41,5 @@
     "node": ">= 0.12.0"
   },
   "private": true
+
 }
